<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name">VHKeyboard</string>
    <string name="english_ime_settings">Settings for VHKeyboard</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="title_keyboard_view_settings">Keyboard view settings</string>
    <string name="title_keyboard_height_portrait">Keyboard height, portrait</string>
    <string name="title_keyboard_height_landscape">Keyboard height, landscape</string>
    <string name="title_key_layout_options">Key layout options</string>
    <string name="title_key_behavior_settings">Key behavior settings</string>
    <string name="title_long_press_alternate_keys">Long-press alternate keys</string>
    <string name="title_suggested_punctuation">Suggested punctuation</string>
    <string name="title_input_mode_settings">Input mode settings</string>
    <string name="title_debugging">Debugging</string>
    <string name="title_input_connection_details">Input connection details</string>
    <string name="title_version">Version</string>
    <string name="title_swipe_gestures">Swipe gestures (experimental)</string>
    <string name="title_hardware_key_actions">Hardware key actions</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss">Press the back key \u21B6 to close the keyboard at any point</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary
        </string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="voice_warning_title">Voice input</string>
    <string name="voice_warning_locale_not_supported">Voice input is not currently supported for your language, but does work in English.</string>
    <string name="voice_warning_may_not_understand">Voice input is an experimental feature using Google\'s networked speech recognition.</string>
    <string name="voice_warning_how_to_turn_off">To turn off voice input, go to keyboard settings.</string>
    <string name="voice_hint_dialog_message">To use voice input, press the microphone button or slide your finger across the on-screen keyboard.</string>
    <string name="voice_listening">Speak now</string>
    <string name="voice_working">Working</string>
    <string name="voice_initializing"></string>
    <string name="voice_error">Error. Please try again.</string>
    <string name="voice_network_error">Couldn\'t connect</string>
    <string name="voice_too_much_speech">Error, too much speech.</string>
    <string name="voice_audio_error">Audio problem</string>
    <string name="voice_server_error">Server error</string>
    <string name="voice_speech_timeout">No speech heard</string>
    <string name="voice_no_match">No matches found</string>
    <string name="voice_not_installed">Voice search not installed</string>
    <string name="voice_swipe_hint"><b>Hint:</b> Swipe across keyboard to speak</string>
    <string name="voice_punctuation_hint"><b>Hint:</b> Next time, try speaking punctuation like \"period\", \"comma\", or \"question mark\".</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="voice_input">Voice input</string>
    <string-array name="voice_input_modes">
        <item>On main keyboard</item>
        <item>On symbols keyboard</item>
        <item>Off</item>
    </string-array>
    <string name="voice_mode_main" translatable="false">0</string>
    <string name="voice_mode_symbols" translatable="false">1</string>
    <string name="voice_mode_off"  translatable="false">2</string>
    <string-array name="voice_input_modes_values" translatable="false">
        <item>@string/voice_mode_main</item>
        <item>@string/voice_mode_symbols</item>
        <item>@string/voice_mode_off</item>
    </string-array>
    <string-array name="voice_input_modes_summary">
        <item>Mic on main keyboard</item>
        <item>Mic on symbols keyboard</item>
        <item>Voice input is disabled</item>
    </string-array>
    <string name="auto_submit">Auto submit after voice</string>
    <string name="auto_submit_summary">Automatically press enter when searching or going to the next field.</string>
    <string name="close_the_keyboard"><font size="17"><b>Close the keyboard\n</b></font><font size="3">\n</font>Press the Back key.</string>
    <string name="touch_and_hold"><font size="17"><b>Touch \u0026 hold a key for options\n</b></font><font size="3">\n</font>Access punctuation and accents.</string>
    <string name="keyboard_settings"><font size="17"><b>Keyboard settings\n</b></font><font size="3">\n</font>Touch \u0026 hold the <b>\?123\</b> key.</string>
    <string name="popular_domain_0">".com"</string>
    <string name="popular_domain_1">".net"</string>
    <string name="popular_domain_2">".org"</string>
    <string name="popular_domain_3">".gov"</string>
    <string name="popular_domain_4">".edu"</string>
    <string name="selectInputMethod">Select input method</string>
    <string name="language_selection_title">Input languages</string>
    <string name="language_selection_summary">Slide finger on spacebar to change language</string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="pref_screen_feedback_title">Key feedback settings</string>
    <string name="pref_screen_feedback_title_summary">Configure key sound, vibrate, preview popup etc.</string>
    <string name="pref_screen_view_title">Theme and label settings</string>
    <string name="pref_screen_view_title_summary">Configure theming and label display</string>
    <string name="keyboard_layout">Keyboard Theme</string>
    <string name="layout_basic" translatable="false">Basic</string>
    <string name="layout_high_contrast" translatable="false">Basic (High Contrast)</string>
    <string name="layout_stone_bold"  translatable="false">Stone (bold)</string>
    <string name="layout_stone_normal"  translatable="false">Stone (normal)</string>
    <string name="layout_gingerbread"  translatable="false">Gingerbread</string>
    <string name="layout_ics"  translatable="false">Ice Cream Sandwich (bright hints)</string>
    <string name="layout_ics_darker"  translatable="false">Ice Cream Sandwich (dark hints)</string>
    <string name="layout_trans"  translatable="false">Transparent</string>
    <string name="layout_trans_neon"  translatable="false">Transparent (experimental)</string>
	<string name="layout_material_black" translatable="false">Material Black</string>
    <string name="layout_material_dark" translatable="false">Material Dark</string>
    <string name="layout_material_light" translatable="false">Material Light</string>
    <string-array name="keyboard_layout_modes" translatable="false">
		<item>@string/layout_material_black</item>
        <item>@string/layout_material_dark</item>
        <item>@string/layout_material_light</item>
    </string-array>
    <string-array name="keyboard_layout_modes_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="subtype_mode_keyboard">keyboard</string>
    <string name="subtype_mode_voice">voice</string>
    <string name="title_force_keyboard_on">Show soft keyboard</string>
    <string name="summary_force_keyboard_on_true">Always</string>
    <string name="summary_force_keyboard_on_false">When no hardware keyboard is available</string>
    <string name="title_keyboard_notification">Use permanent notification</string>
    <string name="summary_keyboard_notification_true">Activate the keyboard by tapping the notification</string>
    <string name="summary_keyboard_notification_false">No notification</string>
    <string name="title_hint_mode">Labeled alternate keys</string>
    <string-array name="hint_modes">
        <item>Hide hint labels</item>
        <item>Show ASCII punctuation</item>
        <item>Show all hint labels</item>
    </string-array>
    <string-array name="hint_modes_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="default_hint_mode">1</string>
    <string name="title_touch_pos">Debug touch screen position</string>
    <string name="summary_touch_pos_true">Show feedback for touch screen location</string>
    <string name="summary_touch_pos_false">Off</string>
    <string name="title_slide_keys">Sliding key events</string>
    <string-array name="slide_keys_entries">
        <item>Ignore keys during sliding movement (Recommended)</item>
        <item>Send first key touched</item>
        <item>Send last key touched</item>
        <item>Send first and last key</item>
        <item>Send all keys touched during sliding movement</item>
    </string-array>
    <string-array name="slide_keys_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="percent">percent</string>
    <string name="title_top_row_scale">5th row height adjustment</string>
    <string name="title_label_scale">Key label scaling</string>
    <string name="title_candidate_scale">Suggestion label scaling</string>
    <string name="title_vibrate_len">Vibrate duration</string>
    <string name="title_click_volume">Key click volume</string>
    <string name="default_click_volume">0.2</string>
    <string name="title_click_method">Click volume control method</string>
    <string name="default_click_method">0</string>
    <string-array name="click_method_entries">
        <item>System default (ignore click volume)</item>
        <item>Absolute click volume</item>
        <item>Follow media volume</item>
        <item>Reverse media volume</item>
    </string-array>
    <string-array name="click_method_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_long_press_duration">Long-press duration</string>
    <string name="title_render_mode">Drawing method</string>
    <string name="render_mode_unavailable">(not changeable on this device)</string>
    <string-array name="render_mode_entries">
        <item>Direct draw (saves memory)</item>
        <item>Software buffered (default)</item>
        <item>Hardware accelerated (experimental)</item>
    </string-array>
    <string-array name="render_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_screen_actions_title">Gesture and key actions</string>
    <string name="pref_screen_actions_title_summary">Configure actions for swipe gestures and hardware keys</string>
    <string name="title_swipe_up">Swipe up</string>
    <string name="title_swipe_down">Swipe down</string>
    <string name="title_swipe_left">Swipe left</string>
    <string name="title_swipe_right">Swipe right</string>
    <string name="title_popup_content">Popup mini-keyboard contents</string>
    <string name="default_popup_content">1</string>
</resources>