<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:hk="http://schemas.android.com/apk/res-auto"
        android:title="@string/english_ime_settings"
        android:key="english_ime_settings">

    <PreferenceCategory
            android:title="@string/title_keyboard_view_settings"
            android:key="graphics_settings">

    <vn.vhn.pckeyboard.SeekBarPreferenceString
            android:defaultValue="@string/default_height_portrait"
            hk:minValue="15"
            hk:maxValue="75"
            hk:step="1"
            hk:displayFormat="%.0f%%"
            android:key="settings_height_portrait"
            android:title="@string/title_keyboard_height_portrait"
            android:persistent="true"
            />

    <vn.vhn.pckeyboard.SeekBarPreferenceString
            android:defaultValue="@string/default_height_landscape"
            hk:minValue="15"
            hk:maxValue="75"
            hk:step="1"
            hk:displayFormat="%.0f%%"
            android:key="settings_height_landscape"
            android:title="@string/title_keyboard_height_landscape"
            android:persistent="true"
            />

    <PreferenceScreen
            android:title="@string/pref_screen_view_title"
            android:summary="@string/pref_screen_view_title_summary">
        <intent android:action="vn.vhn.pckeyboard.PREFS_VIEW"/>
    </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/title_key_layout_options"
            android:key="layout_settings">

    <ListPreference
            android:key="voice_mode"
            android:title="@string/voice_input"
            android:persistent="true"
            android:entryValues="@array/voice_input_modes_values"
            android:entries="@array/voice_input_modes"
            android:defaultValue="@string/voice_mode_symbols"
            />

    <PreferenceScreen
            android:title="@string/language_selection_title"
            android:summary="@string/language_selection_summary">
        <intent
                android:action="vn.vhn.pckeyboard.INPUT_LANGUAGE_SELECTION"/>
    </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/title_key_behavior_settings"
            android:key="key_settings">

    <PreferenceScreen
            android:title="@string/pref_screen_feedback_title"
            android:summary="@string/pref_screen_feedback_title_summary">
        <intent
                android:action="vn.vhn.pckeyboard.PREFS_FEEDBACK"/>
    </PreferenceScreen>

    <PreferenceScreen
            android:title="@string/pref_screen_actions_title"
            android:summary="@string/pref_screen_actions_title_summary">
        <intent android:action="vn.vhn.pckeyboard.PREFS_ACTIONS"/>
    </PreferenceScreen>

    <vn.vhn.pckeyboard.AutoSummaryListPreference
            android:key="pref_slide_keys_int"
            android:title="@string/title_slide_keys"
            android:persistent="true" 
            android:entries="@array/slide_keys_entries"
            android:entryValues="@array/slide_keys_values"
            android:defaultValue="0"
            />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/title_long_press_alternate_keys"
            android:key="altchar_settings">

    <vn.vhn.pckeyboard.AutoSummaryListPreference
            android:key="pref_popup_content"
            android:title="@string/title_popup_content"
            android:persistent="true"
            android:entryValues="@array/popup_content_values"
            android:entries="@array/popup_content_entries"
            android:defaultValue="@string/default_popup_content"
            />

    <vn.vhn.pckeyboard.SeekBarPreferenceString
            android:defaultValue="@string/default_long_press_duration"
            hk:minValue="100"
            hk:maxValue="2000"
            hk:logScale="true"
            hk:displayFormat="%.0f ms"
            android:key="pref_long_press_duration"
            android:title="@string/title_long_press_duration"
            android:persistent="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/title_input_mode_settings"
            android:key="graphics_settings">

    <CheckBoxPreference
            android:key="force_keyboard_on"
            android:title="@string/title_force_keyboard_on"
            android:persistent="true" 
            android:defaultValue="@bool/default_force_keyboard_on"
            android:summaryOn="@string/summary_force_keyboard_on_true"
            android:summaryOff="@string/summary_force_keyboard_on_false"
            />

    <CheckBoxPreference
            android:key="keyboard_notification"
            android:title="@string/title_keyboard_notification"
            android:persistent="true" 
            android:defaultValue="@bool/default_keyboard_notification"
            android:summaryOn="@string/summary_keyboard_notification_true"
            android:summaryOff="@string/summary_keyboard_notification_false"
            />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/title_debugging"
            android:key="debugging">

    <CheckBoxPreference
            android:key="pref_touch_pos"
            android:title="@string/title_touch_pos"
            android:persistent="true" 
            android:defaultValue="false"
            android:summaryOn="@string/summary_touch_pos_true"
            android:summaryOff="@string/summary_touch_pos_false"
            />

    <Preference
            android:key="input_connection_info"
            android:title="@string/title_input_connection_details"
            />

    <Preference
            android:key="label_version"
            android:title="@string/title_version"
            android:summary="@string/auto_version"
            />
    </PreferenceCategory>

</PreferenceScreen>
